[package]
name = "memory_antivirus"
version = "0.1.0"
authors = ["esukmean"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "*", features=["tlhelp32", "processthreadsapi", "memoryapi", "impl-default"] }